day2b refactor